FACES-1714 Develop Liferay Faces Showcase (developed showcase:example composite component, developed separate templates for webapp and portlet, various improvements to use-cases)

--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/outputParameter.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/outputParameter.xhtml
@@ -6,8 +6,8 @@
 	<cc:interface />
 
 	<cc:implementation>
-		<div class="showcase-model-value">
-			<label class="model-label">#{i18n['model-value']}</label>
+		<div class="showcase-parameter-value">
+			<label class="parameter-label">#{i18n['parameter-value']}</label>
 			<pre><cc:insertChildren/> </pre>
 		</div>
 	</cc:implementation>
