FACES-1714 Develop Liferay Faces Showcase (misc. minor fixes)

--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/example.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/example.xhtml
@@ -8,7 +8,7 @@
 	<cc:interface>
 		<cc:attribute name="description" />
 		<cc:attribute name="label" default="#{i18n['component']}" />
-		<cc:attribute name="longDescription" value="false" />
+		<cc:attribute name="longDescription" default="false" />
 		<cc:attribute name="number" />
 		<cc:attribute name="renderedCheckbox" default="false" />
 		<cc:attribute name="requiredCheckbox" default="false" />
