FACES-1714 Develop Liferay Faces Showcase (added css class for showcase:example)

--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/example.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/example.xhtml
@@ -47,7 +47,7 @@
 					<h:outputLabel value="#{i18n['required']}" />
 				</span>
 			</c:if>
-			<div>
+			<div class="example-usage">
 				<cc:insertChildren />
 			</div>
 		</div>
