FACES-1898 Develop alloy:dialog, alloy:outputTooltip, and alloy:popover components FACES-1714 Develop Liferay Faces Showcase (added use cases for alloy:dialog, alloy:outputTooltip, and alloy:popover)

--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/example.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/example.xhtml
@@ -31,6 +31,22 @@
 			<c:if test="#{cc.attrs.longDescription}">
 				<br />
 			</c:if>
+			<c:if test="#{cc.attrs.modal1Checkbox}">
+				<span class="component-modal-checkbox">
+					<h:selectBooleanCheckbox immediate="true" value="#{showcaseModelBean.selectedComponent.modal1}">
+						<f:ajax render="@form" />
+					</h:selectBooleanCheckbox>
+					<h:outputLabel value="#{i18n['modal']}" />
+				</span>
+			</c:if>
+			<c:if test="#{cc.attrs.modal2Checkbox}">
+				<span class="component-modal-checkbox">
+					<h:selectBooleanCheckbox immediate="true" value="#{showcaseModelBean.selectedComponent.modal2}">
+						<f:ajax render="@form" />
+					</h:selectBooleanCheckbox>
+					<h:outputLabel value="#{i18n['modal']}" />
+				</span>
+			</c:if>
 			<c:if test="#{cc.attrs.renderedCheckbox}">
 				<span class="component-rendered-checkbox">
 					<h:selectBooleanCheckbox immediate="true" value="#{showcaseModelBean.selectedComponent.rendered}">
