--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/note.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/note.xhtml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ui:component xmlns="http://www.w3.org/1999/xhtml" xmlns:c="http://java.sun.com/jsp/jstl/core"
-	xmlns:cc="http://java.sun.com/jsf/composite" xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<ui:component xmlns="http://www.w3.org/1999/xhtml" xmlns:alloy="http://liferay.com/faces/alloy"
+	xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:cc="http://java.sun.com/jsf/composite"
+	xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd">
 
 	<cc:interface>
@@ -13,16 +14,16 @@
 			<h:panelGrid columns="2">
 				<c:choose>
 					<c:when test="#{cc.attrs.iconSize == 'small'}">
-						<h:graphicImage library="images" name="note.png" style="height: 40px;" />
+						<alloy:image library="images" name="note.png" style="height: 40px;" />
 					</c:when>
 					<c:otherwise>
-						<h:graphicImage library="images" name="note.png" />
+						<alloy:image library="images" name="note.png" />
 					</c:otherwise>
 				</c:choose>
-				<h:panelGroup layout="block">
-					<h:outputText escape="false" value="#{cc.attrs.value}" />
+				<alloy:panelGroup layout="block">
+					<alloy:outputText escape="false" value="#{cc.attrs.value}" />
 					<cc:insertChildren />
-				</h:panelGroup>
+				</alloy:panelGroup>
 			</h:panelGrid>
 		</div>
 	</cc:implementation>
