FACES-1714 Develop Liferay Faces Showcase (added use-cases for alloy:form, alloy:inputFile, and h:inputFile; Updated use-case text for bridge:inputFile; Updated use-cases for alloy:outputScript to have wider columns).

--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/example.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/example.xhtml
@@ -36,7 +36,7 @@
 					<alloy:selectBooleanCheckbox immediate="true" value="#{showcaseModelBean.selectedComponent.rendered}">
 						<f:ajax render="@form" />
 					</alloy:selectBooleanCheckbox>
-					<alloy:outputLabel value="#{i18n['rendered']}" />
+					<alloy:outputLabel styleClass="inline-label" value="#{i18n['rendered']}" />
 				</span>
 			</c:if>
 			<c:if test="#{cc.attrs.requiredCheckbox}">
@@ -44,7 +44,7 @@
 					<alloy:selectBooleanCheckbox immediate="true" value="#{showcaseModelBean.selectedComponent.required}">
 						<f:ajax render="@form" />
 					</alloy:selectBooleanCheckbox>
-					<alloy:outputLabel value="#{i18n['required']}" />
+					<alloy:outputLabel styleClass="inline-label" value="#{i18n['required']}" />
 				</span>
 			</c:if>
 			<div class="example-usage">
