--- a/util/src/test/resources/applicant.xhtml
+++ b/util/src/test/resources/applicant.xhtml
@@ -4,6 +4,8 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:bridge="http://liferay.com/faces/bridge"
 	xmlns:example-cc="http://xmlns.jcp.org/jsf/composite/example-cc" xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 
+	<script type="text/javascript">alert('hello world');</script>
+	<script type="text/javascript">console.log('hello world');</script>
 	<example-cc:clipboard label="#{i18n['job-application']}" />
 	<example-cc:sponsorButton />
 	<example-cc:divider />
