--- a/portal/src/main/resources/META-INF/resources/liferay-ui/icon-menu.xhtml
+++ b/portal/src/main/resources/META-INF/resources/liferay-ui/icon-menu.xhtml
@@ -3,7 +3,7 @@
 	xmlns:cc="http://java.sun.com/jsf/composite" xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:liferay-ui="http://liferay.com/faces/ui" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xmlns:vdldoc="http://vdldoc.org/vdldoc"
-	xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd">
+	xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd http://vdldoc.org/vdldoc https://raw.githubusercontent.com/omnifaces/vdldoc/master/src/main/resources/org/omnifaces/vdldoc/resources/vdldoc-cc.xhtml.xsd">
 
 	<cc:interface shortDescription="The &lt;code&gt;liferay-ui:icon-menu&lt;/code&gt; renders a list of child components as a menu.">
 		<cc:attribute name="align" default="right" required="false" />
@@ -13,6 +13,7 @@
 		<cc:attribute name="styleClass" required="false" shortDescription="The name of a CSS class that is to be rendered within the class attribute." />
     	<cc:extension>
     		<vdldoc:since value="3.2.4" />
+			<vdldoc:deprecated value="true" shortDescription="No replacement available." />
     	</cc:extension>
 	</cc:interface>
 
