--- a/alloy/src/main/resources/META-INF/resources/aui-cc/messages.xhtml
+++ b/alloy/src/main/resources/META-INF/resources/aui-cc/messages.xhtml
@@ -3,7 +3,7 @@
 	xmlns:f="http://java.sun.com/jsf/core" xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:cc="http://java.sun.com/jsf/composite"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:vdldoc="http://vdldoc.org/vdldoc"
-	xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd">
+	xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd http://vdldoc.org/vdldoc https://raw.githubusercontent.com/omnifaces/vdldoc/master/src/main/resources/org/omnifaces/vdldoc/resources/vdldoc-cc.xhtml.xsd">
 
 	<cc:interface shortDescription="The &lt;code&gt;aui-cc:messages&lt;/code&gt; encapsulates a standard JSF h:messages tag with JSR 286 (Portlet 2.0) CSS class names.">
 		<cc:attribute name="globalOnly" default="false" required="false" shortDescription="Boolean flag indicating whether or not this component is to render only the global messages, meaning, messages that are not associated with an individual component. The default value is &quot;false&quot;." />
@@ -12,7 +12,7 @@
 		<cc:attribute name="styleClass" required="false" shortDescription="The name of a CSS class that is to be rendered within the class attribute." />
 		<cc:attribute name="value" required="false" shortDescription="This attribute is a pass-thru to the underlying JSF component's value attribute, which sets the current value for the component." />
 		<cc:extension>
-			<vdldoc:deprecated value="true" shortDescription="Please use h:messages instead." />
+			<vdldoc:deprecated value="true" shortDescription="Please use alloy:messages instead." />
 			<vdldoc:since value="3.2.4" />
 		</cc:extension>
 	</cc:interface>
