--- a/portal/src/main/resources/META-INF/resources/liferay-ui/captcha.xhtml
+++ b/portal/src/main/resources/META-INF/resources/liferay-ui/captcha.xhtml
@@ -7,11 +7,12 @@
               xmlns:liferay-ui="http://liferay.com/faces/ui"
               xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
               xmlns:vdldoc="http://vdldoc.org/vdldoc"
-              xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd">
+			  xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd http://vdldoc.org/vdldoc https://raw.githubusercontent.com/omnifaces/vdldoc/master/src/main/resources/org/omnifaces/vdldoc/resources/vdldoc-cc.xhtml.xsd">
 
     <cc:interface shortDescription="The &lt;code&gt;liferay-ui:captcha&lt;/code&gt; tag encapsulates an HTML &lt;code&gt;div&lt;/code&gt; tag with a liferay captcha image inside it.">
     	<cc:extension>
     		<vdldoc:since value="3.2.4" />
+			<vdldoc:deprecated value="true" shortDescription="&lt;code&gt;Deprecated:&lt;/code&gt; Please use &lt;code&gt;portal:inputCaptcha&lt;/code&gt; instead." />
     	</cc:extension>
     </cc:interface>
 
