--- a/portal/src/main/resources/META-INF/resources/liferay-ui/separator.xhtml
+++ b/portal/src/main/resources/META-INF/resources/liferay-ui/separator.xhtml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui:component xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:cc="http://java.sun.com/jsf/composite"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:vdldoc="http://vdldoc.org/vdldoc"
-	xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd">
+	xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd http://vdldoc.org/vdldoc https://raw.githubusercontent.com/omnifaces/vdldoc/master/src/main/resources/org/omnifaces/vdldoc/resources/vdldoc-cc.xhtml.xsd">
 
 	<cc:interface shortDescription="The &lt;code&gt;liferay-ui:seperator&lt;/code&gt; tag encapsulates an JSF &lt;code&gt;h:panelGroup&lt;/code&gt; tag which takes no children and has a separator styleClass.">
     	<cc:extension>
     		<vdldoc:since value="3.2.4" />
+			<vdldoc:deprecated value="true" shortDescription="Please use alloy:panelGroup instead." />
     	</cc:extension>
 	</cc:interface>
 
