FACES-1714 Develop Liferay Faces Showcase (Removed unused attributes from components.) FACES-1894 Add general utilities for Liferay Faces Alloy Components (Added missing contentTypes attribute for alloy:validateFile.)

--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/note.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/note.xhtml
@@ -7,6 +7,7 @@
 
 	<cc:interface>
 		<cc:attribute name="iconSize" default="big" />
+		<cc:attribute name="value" />
 	</cc:interface>
 
 	<cc:implementation>
