FACES-1714 do not cover up text when longDescription is used

--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/example.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/example.xhtml
@@ -28,6 +28,7 @@
 					<alloy:outputText escape="false" value=":&amp;nbsp;#{cc.attrs.description}" style="font-weight: normal;"/>
 				</c:if>
 			</alloy:outputLabel>
+			<div style="clear: both;" />
 			<c:if test="#{cc.attrs.longDescription}">
 				<br />
 			</c:if>
