FACES-1714 Develop Liferay Faces Showcase (only show rendered checkbox when ProjectStage is not 'Production')

--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/example.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/example.xhtml
@@ -32,7 +32,7 @@
 			<c:if test="#{cc.attrs.longDescription}">
 				<br />
 			</c:if>
-			<c:if test="#{cc.attrs.renderedCheckbox}">
+			<c:if test="#{(cc.attrs.renderedCheckbox and (facesContext.application.projectStage != 'Production'))}">
 				<span class="component-rendered-checkbox">
 					<alloy:selectBooleanCheckbox immediate="true" value="#{showcaseModelBean.selectedComponent.rendered}">
 						<f:ajax render="@form" />
