FACES-1714 Develop Liferay Faces Showcase (remove longDescription)

--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/outputModel.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/outputModel.xhtml
@@ -8,7 +8,9 @@
 	<cc:implementation>
 		<div class="showcase-model-value">
 			<label class="model-label">#{i18n['model-value']}</label>
-			<pre><cc:insertChildren/> </pre>
+			<div class="example-content">
+				<pre><cc:insertChildren/> </pre>
+			</div>
 		</div>
 	</cc:implementation>
 
