--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/outputParameter.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/outputParameter.xhtml
@@ -8,7 +8,9 @@
 	<cc:implementation>
 		<div class="showcase-parameter-value">
 			<label class="parameter-label">#{i18n['parameter-value']}</label>
-			<pre><cc:insertChildren/> </pre>
+			<div class="example-content">
+				<pre><cc:insertChildren/> </pre>
+			</div>
 		</div>
 	</cc:implementation>
 
