--- a/portal/src/main/resources/META-INF/resources/liferay-ui/ice-nav-data-paginator.xhtml
+++ b/portal/src/main/resources/META-INF/resources/liferay-ui/ice-nav-data-paginator.xhtml
@@ -3,7 +3,7 @@
 	xmlns:h="http://xmlns.jcp.org/jsf/html" xmlns:ice="http://www.icesoft.com/icefaces/component" xmlns:cc="http://xmlns.jcp.org/jsf/composite"
 	xmlns:ui="http://xmlns.jcp.org/jsf/facelets" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xmlns:vdldoc="http://vdldoc.org/vdldoc"
-	xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd">
+	xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd http://vdldoc.org/vdldoc https://raw.githubusercontent.com/omnifaces/vdldoc/master/src/main/resources/org/omnifaces/vdldoc/resources/vdldoc-cc.xhtml.xsd">
 
 	<cc:interface shortDescription="The &lt;code&gt;liferay-ui:ice-info-data-paginator&lt;/code&gt; encapsulates an ICEfaces &lt;code&gt;ice:dataPaginator&lt;/code&gt; tag that renders navigation controls for an associated &lt;code&gt;ice:dataTable&lt;/code&gt;. The icons will match the current Liferay theme.">
 		<cc:attribute name="cssClass" required="false" shortDescription="The name of a CSS class that is to be rendered within the class attribute (same as styleClass)." />
