--- a/portal/src/main/resources/META-INF/resources/liferay-ui/input-editor.xhtml
+++ b/portal/src/main/resources/META-INF/resources/liferay-ui/input-editor.xhtml
@@ -8,7 +8,7 @@
 	xmlns:liferayutil="http://liferay.com/faces/util"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xmlns:vdldoc="http://vdldoc.org/vdldoc"
-	xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd">
+	xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd http://vdldoc.org/vdldoc https://raw.githubusercontent.com/omnifaces/vdldoc/master/src/main/resources/org/omnifaces/vdldoc/resources/vdldoc-cc.xhtml.xsd">
 
 	<cc:interface shortDescription="The &lt;code&gt;liferay-ui:input-editor&lt;/code&gt; tag renders a text area that provides the ability to enter rich text such as bold, italic, and underline. The renderer relies on the CKEditor&lt;sup&gt;TM&lt;/sup&gt; to provide the rich text editing area. Since Liferay bundles the CKEditor&lt;sup&gt;TM&lt;/sup&gt; JavaScript and related images with the portal, the portlet developer does not need to include it with the portlet.">
 		<cc:attribute name="disabled" default="false" required="false" />
