--- a/alloy/src/main/resources/META-INF/resources/aui-cc/button.xhtml
+++ b/alloy/src/main/resources/META-INF/resources/aui-cc/button.xhtml
@@ -2,7 +2,7 @@
 <ui:component xmlns="http://www.w3.org/1999/xhtml" xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:h="http://java.sun.com/jsf/html"
 	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:cc="http://java.sun.com/jsf/composite" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xmlns:vdldoc="http://vdldoc.org/vdldoc"
-	xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd">
+	xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd http://vdldoc.org/vdldoc https://raw.githubusercontent.com/omnifaces/vdldoc/master/src/main/resources/org/omnifaces/vdldoc/resources/vdldoc-cc.xhtml.xsd">
 
 	<cc:interface shortDescription="Renders a div with CSS class name &quot;aui-button&quot; and a child input element with CSS class name &quot;aui-button-input&quot;. The button's interface also defines an actionSource with name=&quot;click&quot; that can be referenced in the using page.">
 		<cc:actionSource name="click" targets="cmdButton" />
