--- a/alloy/src/main/resources/META-INF/resources/aui-cc/select.xhtml
+++ b/alloy/src/main/resources/META-INF/resources/aui-cc/select.xhtml
@@ -3,7 +3,7 @@
 	xmlns:h="http://java.sun.com/jsf/html" xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:cc="http://java.sun.com/jsf/composite"
 	xmlns:aui="http://liferay.com/faces/aui" xmlns:aui-cc="http://liferay.com/faces/aui-cc"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:vdldoc="http://vdldoc.org/vdldoc"
-	xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd">
+	xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd http://vdldoc.org/vdldoc https://raw.githubusercontent.com/omnifaces/vdldoc/master/src/main/resources/org/omnifaces/vdldoc/resources/vdldoc-cc.xhtml.xsd">
 
 	<cc:interface shortDescription="The &lt;code&gt;aui-cc:select&lt;/code&gt; encapsulates a standard JSF h:selectOneMenu tag with CSS class name &quot;aui-field-input aui-field-input-select aui-field-input-menu&quot;. NOTE that sometimes the JSF implementation performs more reliably if a simple h:selectOneMenu is used instead of this tag.">
 		<cc:attribute name="inlineMessage" default="false" required="false" shortDescription="Boolean flag indicating whether or not there should be an inline h:message tag included. The default value is &quot;false&quot;." />
