--- a/portal/src/main/resources/META-INF/resources/liferay-ui/ice-page-iterator.xhtml
+++ b/portal/src/main/resources/META-INF/resources/liferay-ui/ice-page-iterator.xhtml
@@ -4,7 +4,7 @@
 	xmlns:liferay-ui="http://liferay.com/faces/ui" xmlns:liferay-util="http://liferay.com/faces/util"
 	xmlns:ui="http://java.sun.com/jsf/facelets" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xmlns:vdldoc="http://vdldoc.org/vdldoc"
-	xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd">
+	xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd http://vdldoc.org/vdldoc https://raw.githubusercontent.com/omnifaces/vdldoc/master/src/main/resources/org/omnifaces/vdldoc/resources/vdldoc-cc.xhtml.xsd">
 
 	<cc:interface shortDescription="The &lt;code&gt;liferay-ui:ice-data-iterator&lt;/code&gt; encapsulates the &lt;code&gt;liferay-ui:ice-info-data-paginator&lt;/code&gt; and &lt;code&gt;liferay-ui:ice-nav-data-paginator&lt;/code&gt; tags and renders navigation controls for an associated &lt;code&gt;ice:dataTable&lt;/code&gt;.">
 		<cc:attribute name="cssClass" required="false" shortDescription="The name of a CSS class that is to be rendered within the class attribute (same as styleClass)." />
