--- a/portal/src/main/resources/META-INF/resources/liferay-ui/info.xhtml
+++ b/portal/src/main/resources/META-INF/resources/liferay-ui/info.xhtml
@@ -3,7 +3,7 @@
 	xmlns:cc="http://java.sun.com/jsf/composite" xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:liferay-ui="http://liferay.com/faces/ui" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xmlns:vdldoc="http://vdldoc.org/vdldoc"
-	xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd">
+	xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd http://vdldoc.org/vdldoc https://raw.githubusercontent.com/omnifaces/vdldoc/master/src/main/resources/org/omnifaces/vdldoc/resources/vdldoc-cc.xhtml.xsd">
 
 	<cc:interface  shortDescription="The &lt;code&gt;liferay-ui:info&lt;/code&gt; tag encapsulates an HTML &lt;code&gt;div&lt;/code&gt; tag with a liferay-ui:message component inside it.">
 		<cc:attribute name="message" required="true" />
