--- a/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/outputAttribute.xhtml
+++ b/demos/showcase/showcase-webapp/src/main/webapp/resources/showcase/outputAttribute.xhtml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui:component xmlns="http://www.w3.org/1999/xhtml" xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:cc="http://java.sun.com/jsf/composite" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://www.w3.org/1999/xhtml http://www.w3.org/2002/08/xhtml/xhtml1-transitional.xsd">
 
 	<ui:remove><!-- <cc:interface /> --></ui:remove>
